# bundle-flow

./: .dockerignore  .gitignore  ATOM_SIZE_ECONOMICS.md  BandleFlow_colab.ipynb  BundleFlow.ipynb  CITATION.cff  COLAB_SETUP_GUIDE.md  COMPREHENSIVE_GUIDE.md  CRITICAL_ISSUES_ANALYSIS.md  ECONOMICS_EXPLANATION.md  ECONOMIC_EVALUATION.md  GUMBEL_SOFTMAX_SOLUTION.md  GUMBEL_THEORY_DEEP_DIVE.md  IMPLEMENTATION_REPORT.md  LICENSE  MODEL.md  Makefile  README.md  REALISTIC_STAGE2_CONFIG.md  RECTIFIED_FLOW_FOR_ECONOMISTS.md  RegretNet.ipynb  SOFTMAX_FAILURE_ANALYSIS.md  SOLUTION_ROADMAP.md  STAGE2_ISSUE_REPORT.md  TECHNICAL_ISSUES_ANALYSIS.md  colab_a100_quick_start.py  pyproject.toml  requirements.txt  run_stage2_colab_a100.sh  run_stage2_colab_a100_optimized.sh  run_stage2_smart.sh  switch_device.py  test_device_movement.py  test_eta_fix.py  test_gpu.py  test_improvements.py  test_initialization.py  test_stage2_improvements.py  test_valuation.py
.devcontainer/: .env  Dockerfile  README.md  devcontainer.json  docker-compose.yml  initialize.sh  setup_git.sh
bf/: __init__.py  data.py  flow.py  menu.py  utils.py  valuation.py
bundle_flow.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bundleflow/: __init__.py  data.py  menu.py  train_stage1_impl.py  train_stage2_impl.py  utils.py
bundleflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
checkingpoints_paper_m50/: flow_stage1_final.pt
checkpoints/: README.md  flow_stage1_final.pt  flow_stage1_step10000.pt  flow_stage1_step15000.pt  flow_stage1_step20000.pt  flow_stage1_step25000.pt  flow_stage1_step30000.pt  flow_stage1_step35000.pt  flow_stage1_step40000.pt  flow_stage1_step45000.pt  flow_stage1_step5000.pt  flow_stage1_step50000.pt  flow_stage1_step55000.pt  flow_stage1_step60000.pt  train_log.csv
src/: __init__.py  (+2 more)
(+36 files in other folders)
